--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,3 +38,9 @@ jobs:
 
     - name: Package application
       run: mvn package
+
+    - name: Upload jar as artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: packaged-jar
+        path: target/*.jar
